Cover for 1.6 PG

--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -7,17 +7,17 @@
 \usepackage[absolute]{textpos}
 
 \geometry{papersize={1227.62pt,860pt}}
-\geometry{papersize={1261.60pt,810pt}}
+\geometry{papersize={1262.28pt,810pt}}
 
 \newcommand{\boxwidth}{5in}
 \newcommand{\spacewidth}{621pt}
-\newcommand{\spinewidth}{19.602pt} % #pages * 0.168984
+\newcommand{\spinewidth}{20.27808pt} % #pages * 0.168984
 
 \setlength{\evensidemargin}{39.76274pt}
 \setlength{\oddsidemargin}{39.76274pt}
 
 \pdfcompresslevel=9
-\def\pdfBorderAttrs{/Border [0 0 0] } % No border around Links
+\def\pdfBorderAttrs{/Border [0 0 0] } % No border around links
 \usepackage{hyperref}
 
 \begin{document}
@@ -25,14 +25,14 @@
 
 \begin{textblock}{}(16.48,3.91)
   \begin{rotate}{270}
-    \setlength{\fboxsep}{31.7pt} 
+    \setlength{\fboxsep}{31.7pt}
     \colorbox{red}{\textsf{\bfseries\large\textcolor{white}{{\hspace{38pt}Equalizer
             Programming and User Guide\hspace{38pt}}}}}
   \end{rotate}
 \end{textblock}
 
 \begin{textblock}{}(16.38,13)
-  {1.4}
+  {1.6}
 \end{textblock}
 
 \parbox[t]{\spacewidth}{\hfill}
@@ -54,6 +54,6 @@
 \parbox[t]{\boxwidth}{ \center{\Large The official reference for developing and
     deploying parallel, scalable OpenGL\texttrademark\ applications
     based on the Equalizer parallel rendering framework }\\\vspace{1cm}
-  {\Large Revision 1.12 for Equalizer 1.4}\\[\medskipamount]
+  {\Large Revision 1.14 for Equalizer 1.6}\\[\medskipamount]
 }
 \end{document}
