--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -5338,11 +5338,12 @@ name followed by its value. The following attributes are available:
   \textbf{Name} & EQ\_PIPE\_IATTR\_HINT\_CUDA\_GL\_INTEROP\\
   \textbf{Value} & OFF \textbar \ ON\\
   \textbf{Default} & OFF\\
-  \textbf{Details} & Determines if the pipe thread enables interoperability between CUDA
-  and OpenGL or not. When set to ON, the CUDA device is configured on which the
-  thread executes the CUDA device code. If no graphics adapter is specified in the config
-  file, the one providing the highest compute performances on the particular node is chosen.
-  When set to OFF, no CUDA device is configured at all.\\
+  \textbf{Details} & Determines if the pipe thread enables interoperability
+  between CUDA and OpenGL or not. When set to ON, the CUDA device is configured
+  on which the thread executes the CUDA device code. If no graphics adapter is
+  specified in the config file, the one providing the highest compute
+  performances on the particular node is chosen.  When set to OFF, no CUDA
+  device is configured at all.\\
   \hline
 \end{tabularx}\\\vfill
 
