--- a/Developer/VR/paper.tex
+++ b/Developer/VR/paper.tex
@@ -16,7 +16,7 @@
 \fi
 
 \title{Project, Virtual Reality\\Group 8}
-\author{Stefan Eilemann, Benjamin Long}
+\author{Stefan Eilemann}
 
 \newcommand{\tm}{\texttrademark~}
 \newcommand{\rc}{\raise 1ex\hbox{{\tiny\textregistered}}~}
@@ -32,6 +32,7 @@
 %  tradeoff: maybe underfull vboxes
 \clubpenalty=10000
 \widowpenalty=10000
+\date{Mar 20, 2013}
 
 \begin{document}
 \maketitle
